--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <html>
     <head>
-        <meta name="viewport" content="width-device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="index.css">
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width-device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
         <div class="container1">
         <h1><span class="wh">Generate a </span><span class="hi">random password</span></h1>
         <p>Never use an insecure password again.</p>
-        <button>Generate passwords</button>
-        <div>
+        <button id="password1">Generate passwords</button>
+        <hr class="line">
+        <p id="rectangle"></p> <p id="rectangle2"></p>
         <div class="container2">
         <h1><span class="wh">Generate a </span><span class="hi">random password</span></h1>
         <p>Never use an insecure password again.</p>
-    <div class="container3">
         <button>Generate passwords</button>
+        <hr class="line2">
+        <div id="rectangle3"></div> <div id="rectangle4"></div>
         <script src="index.js"></script>
     </div>
 </div>
